--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,15 @@ body {
   font-size: larger;
   text-align: center;
 }
+
+ul {
+  font-size: larger;
+  list-style: none;
+}
+
+.Poke_button {
+  width: 50%;
+  min-width: fit-content;
+  margin: 5px;
+  padding: 5px;
+}
