Loading time feature
* I added a h2 where the loading message will be displayed
* I adapted the style
* Creation of hideLoadingMessage and showLoadingMessage in script.js

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,11 @@ ul {
   list-style: none;
 }
 
+#loading_time {
+  color: grey;
+  font-size: medium;
+}
+
 .Poke_button {
   width: 50%;
   min-width: fit-content;
