--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+:root {
+  --font-weird: "Courgette", cursive;
+}
+
 body {
   font-size: larger;
   text-align: center;
@@ -18,4 +22,46 @@ ul {
   min-width: fit-content;
   margin: 5px;
   padding: 5px;
+}
+
+#modal_wrapper {
+  background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+  left: 0;
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+#modal_window {
+  border: solid 2px skyblue;
+  height: fit-content;
+  width: fit-content;
+  min-width: 50svh;
+  min-height: 50svh;
+  background-color: aliceblue;
+  padding: 1em;
+  border-radius: 2em;
+}
+
+#close_modal_button {
+  text-align: end;
+  font-size: xxx-large;
+}
+
+h3 {
+  font-family: var(--font-weird);
+  font-size: xxx-large;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.is_hidden {
+  display: none !important;
 }
